@@ -995,6 +995,8 @@ nuttx-0.3.9 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Fix broken 'clean' target on z80sim configurations
 	* Re-structure arch/z80 to provide support for all ZiLOG 8-bit microcontrollers (ez8
 	  in particular for now).
+	* Add support for TRS80-Model 3 based on the xtrs emulation (http://www.tim-mann.org/xtrs.html)
+	  Per patch from Jacques Pelletier.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
