@@ -341,5 +341,8 @@
 	* Fix broken 'clean' target on z80sim configurations
 	* Re-structure arch/z80 to provide support for all ZiLOG 8-bit microcontrollers (ez8
 	  in particular for now).
+	* Add support for TRS80-Model 3 based on the xtrs emulation (http://www.tim-mann.org/xtrs.html)
+	  Per patch from Jacques Pelletier.
+
 
 
